--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+spring.datasource.url=jdbc:postgresql://${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+serverTimezone=UTC
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.hibernate.SQL=debug
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jackson.time-zone=America/Bogota
+spring.jackson.locale=es_CO
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.hikari.pool-name=HikariPoolPostgreSQL
